Updated footer links to link through to pages, Footer overlap issue on smaller screens

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -957,6 +957,13 @@ footer{
 }
 
 /* Footer Responsive */
+@media (max-width: 1245px){
+    body{
+        footer{
+            padding:117px 0 120px 0;
+        }
+    }
+}
 @media (max-width: 767px) {
     .footer {
         text-align: center;
